[Feat] 자녀 프로필 추가 시 MBTI 진단 페이지 연동

--- a/src/main/resources/templates/childAdd.html
+++ b/src/main/resources/templates/childAdd.html
@@ -479,7 +479,7 @@
             .then(response => {
               document.getElementById('resultMessage').classList.add('text-success');
               localStorage.removeItem('selectedProfileImage');
-              window.location.href = "/children/select";
+              window.location.href = "/children/askMbti";
             })
             .catch(error => {
               document.getElementById('resultMessage').textContent = "프로필 등록에 실패했습니다.";
