[Feat]nav바 API url 연동 및 폰트 설정

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,9 +6,15 @@
     <title>로그인</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
+        @font-face {
+            font-family: 'IM_Hyemin-Bold';
+            src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2106@1.1/IM_Hyemin-Bold.woff2') format('woff');
+            font-weight: normal;
+            font-style: normal;
+        }
         body {
             background-color: #fff9e6;
-            font-family: 'Arial Rounded MT Bold', Arial, sans-serif;
+            font-family: 'IM_Hyemin-Bold';
             min-height: 100vh; /* 전체 뷰포트 높이 확보 */
             display: flex; /* Flexbox 사용 */
             align-items: center; /* 수직 중앙 정렬 */
