--- a/src/main/resources/static/assets/css/newSidebar.css
+++ b/src/main/resources/static/assets/css/newSidebar.css
@@ -1,7 +1,14 @@
+@font-face {
+    font-family: 'IM_Hyemin-Bold';
+    src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2106@1.1/IM_Hyemin-Bold.woff2') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
 body {
     overflow-x: hidden;
     background-color: #fff9e6; /* 연한 파스텔 노란색 배경 */
-    font-family: 'Arial Rounded MT Bold', Arial, sans-serif;
+    font-family: 'IM_Hyemin-Bold';
 }
 
 /* Navigation Bar styles */
