--- a/src/main/resources/templates/userPage.html
+++ b/src/main/resources/templates/userPage.html
@@ -6,6 +6,8 @@
     <title>Profile Edit</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
+
     <link href="/assets/css/newSidebar.css" rel="stylesheet">
     <style>
         body {
@@ -181,9 +183,9 @@
     <a href="/children/select"><i class="fas fa-child"></i> 아이 프로필 변경</a>
     <a href="/children/page"><i class="fas fa-edit"></i> 아이 정보 수정</a>
     <a href="/userpage"><i class="fas fa-user"></i> 계정보기</a>
-    <a href="#"><i class="fas fa-history"></i> 최근 책 보기</a>
-    <a href="/ChildFavorBookList.html"><i class="fas fa-heart"></i> 좋아요 누른 책 보기</a>
-    <a href="#"><i class="fas fa-tags"></i> 카테고리 별 책보기</a>
+    <a href="/ChildRecentReadBook"><i class="fas fa-history"></i> 최근 책 보기</a>
+    <a href="/ChildFavorBookList"><i class="fas fa-heart"></i> 좋아요 누른 책 보기</a>
+    <a href="/BookCategoryHtml"><i class="fas fa-tags"></i> 카테고리 별 책보기</a>
     <a href="/lottery/form"><i class="fas fa-gift"></i> 선착순 이벤트</a>
 </div>
 <script src="/assets/js/newSidebar.js"></script>
