[Feat] Quartz Scheduler job제거 기능

--- a/src/main/resources/templates/diagnosisForm.html
+++ b/src/main/resources/templates/diagnosisForm.html
@@ -175,6 +175,7 @@
     <a href="/children/select"><i class="fas fa-child"></i> 아이 프로필 변경</a>
     <a href="/children/page"><i class="fas fa-edit"></i> 아이 정보 수정</a>
     <a href="/userpage"><i class="fas fa-user"></i> 계정보기</a>
+    <a href="/children/childMBTIResult"><i class="fas fa-user-circle"></i> 아이 성향 확인하기</a>
     <a href="#"><i class="fas fa-history"></i> 최근 책 보기</a>
     <a href="/ChildFavorBookList.html"><i class="fas fa-heart"></i> 좋아요 누른 책 보기</a>
     <a href="#"><i class="fas fa-tags"></i> 카테고리 별 책보기</a>
@@ -341,12 +342,15 @@
     }
 
     function checkResults() {
+        const resultButton = document.querySelector('#end-screen button');
+        resultButton.disabled = true; // 버튼 비활성화
+
         fetch(`/api/mbti/diagnose`, {
             method: 'POST',
             headers: { 'Content-Type': 'application/json' },
             body: JSON.stringify({
                 eiScore: answers[0],
-                snScore:  answers[1],
+                snScore: answers[1],
                 tfScore: answers[2],
                 jpScore: answers[3]
             })
@@ -366,6 +370,7 @@
             .catch(error => {
                 console.error("오류 발생:", error);
                 alert('진단 결과를 전송하는 데 실패했습니다.');
+                resultButton.disabled = false; // 실패 시 버튼을 다시 활성화
             });
     }
 
