--- a/src/main/resources/templates/BookReadPage.html
+++ b/src/main/resources/templates/BookReadPage.html
@@ -165,6 +165,7 @@
   <a href="/children/select">아이 프로필 변경</a>
   <a href="/children/page">아이 정보 수정</a>
   <a href="/userpage">계정보기</a>
+  <a href="/children/childMBTIResult"><i class="fas fa-user-circle"></i> 아이 성향 확인하기</a>
   <a href="#">최근 책 보기</a>
   <a href="/ChildFavorBookList.html">좋아요 누른 책 보기</a>
   <a href="#">카테고리 별 책보기</a>
