[Feat] 아이 성향 확인하기 섹션 sidebar에 추가

--- a/src/main/resources/templates/ChildFavorBookList.html
+++ b/src/main/resources/templates/ChildFavorBookList.html
@@ -145,6 +145,7 @@
   </div>
 </nav>
 
+<!-- Sidebar with Icons -->
 <div id="sidebar">
   <a href="/children/select"><i class="fas fa-child"></i> 아이 프로필 변경</a>
   <a href="/children/page"><i class="fas fa-edit"></i> 아이 정보 수정</a>
